* object.c (rb_inspect): check the default internal encoding as   String#inspect do.   [ruby-dev:49415] [Bug #11787]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@53067 b2dd03c8-39d4-4d8f-98ff-823fe69b080e